test/parallel/taskPar/vass/taskintents-errors.good
taskintents-errors.chpl:10: error: illegal lvalue in assignment
taskintents-errors.chpl:22: error: illegal lvalue in assignment
taskintents-errors.chpl:37: error: illegal lvalue in assignment
taskintents-errors.chpl:49: error: illegal lvalue in assignment
